langbox/tests/invalid_parser_map.stderr
error[E0277]: expected a `Fn(T)` closure, found `bool`
   --> tests/invalid_parser_map.rs:6:17
    |
6   |     parser!(a->[false])
    |     ------------^^^^^--
    |     |           |
    |     |           expected an `Fn(T)` closure, found `bool`
    |     required by a bound introduced by this call
    |
    = help: the trait `Fn<(T,)>` is not implemented for `bool`
note: required by a bound in `langbox::Parser::map`
   --> src/parser.rs
    |
    |     fn map<U>(self, f: impl Fn(T) -> U + Copy) -> impl Parser<TokenKind, U, E> {
    |                             ^^^^^^^^^^ required by this bound in `Parser::map`

error[E0277]: the trait bound `impl langbox::Parser<TokenKind, _, E>: langbox::Parser<TokenKind, bool, E>` is not satisfied
 --> tests/invalid_parser_map.rs:5:6
  |
5 | ) -> impl Parser<TokenKind, bool, E> {
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `langbox::Parser<TokenKind, bool, E>` is not implemented for `impl langbox::Parser<TokenKind, _, E>`

error[E0277]: expected a `Fn(T)` closure, found `bool`
   --> tests/invalid_parser_map.rs:5:6
    |
5   | ) -> impl Parser<TokenKind, bool, E> {
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an `Fn(T)` closure, found `bool`
    |
    = help: the trait `Fn<(T,)>` is not implemented for `bool`
note: required by a bound in `langbox::Parser::{synthetic#7}`
   --> src/parser.rs
    |
    |     fn map<U>(self, f: impl Fn(T) -> U + Copy) -> impl Parser<TokenKind, U, E> {
    |                             ^^^^^^^^^^ required by this bound in `Parser::{synthetic#7}`
